examples/v1alpha1/http-routing/foo-httproute.yaml
# Used in
# - site-src/v1alpha1/guides/http-routing.md

apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: foo-route
  labels:
    gateway: prod-web-gw
spec:
  hostnames:
  - "foo.example.com"
  rules:
  - matches:
    - path:
        type: Prefix
        value: /login
    forwardTo:
    - serviceName: foo-svc
      port: 8080
